--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Iman Tumorang",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.17.1",
     "express": "^4.15.2",
     "socket-io": "^1.0.0",
     "socket.io": "^1.7.3",
